--- a/sass/views/_exchange.scss
+++ b/sass/views/_exchange.scss
@@ -1,4 +1,10 @@
-.background__container__exchange {
+.background__container__liquidity {
     background-color: rgb(255, 255, 184);
 }
 
+.background__container__exchange {
+    background-color: rgba(216, 0, 0, 0.075);
+}
+.jere{
+    display: none;
+}
