--- a/sass/views/_exchange.scss
+++ b/sass/views/_exchange.scss
@@ -3,8 +3,5 @@
 }
 
 .background__container__exchange {
-    background-color: rgba(216, 0, 0, 0.075);
-}
-.jere{
-    display: none;
+    background-color: rgb(250, 237, 237);
 }
