--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -42,9 +42,25 @@
                 font-family: pokemon;
             }
         }
+        &__language{
+            margin-top: 13px;
+            color: $red;
+            margin-right: 15px;
+            &:hover {
+                opacity: 0.5;
+            transition: 0.3s;
+            cursor: pointer;
+            }
+        }
         &__settings {
             margin-top: 13px;
             color: $red;
+            margin-right: 5px;
+            &:hover {
+                opacity: 0.5;
+            transition: 0.3s;
+            cursor: pointer;
+            }
         }
         &__wallet {
             padding: 12px;
@@ -56,8 +72,9 @@
                 width: 135px;
                 cursor: pointer;
                 &:hover {
-                    color: white;
-                    border: solid red 1px;
+                    opacity: 0.5;
+                transition: 0.3s;
+                cursor: pointer;
                 }
             }
         }
@@ -97,8 +114,29 @@ body header nav div div {
             border-radius:  0 0 0.8rem 0.8rem;
         }
     }
-}
+} 
 .exchange__nav__bar__trade:hover .exchange__nav__bar__dropdown {
+    display: block;
+    background-color: #faf9fa;
+}
+.language__dropdown {
+    display: none;
+    position: absolute;
+    background-color: $background-blanco;
+    padding: 1rem;
+    left: 86%;
+    border-radius: 0 0 0.5rem 0.5rem;
+    border: $border-blanco solid 1px;
+    &__text {
+        padding: 10px;
+        &:hover {
+            opacity: 0.5;
+            transition: 0.3s;
+            cursor: pointer;
+        }
+    }
+}
+.language:hover .language__dropdown {
     display: block;
     background-color: #faf9fa;
 }
@@ -108,6 +146,7 @@ body header nav div div {
     display: flex;
     border-bottom: $border-blanco solid 1px;
     justify-content: center;
+    margin-top: 33px;
     &__h2 {
         padding: 12px 0px 3px 0px;
         margin-left: 10px;
@@ -126,105 +165,60 @@ body header nav div div {
     }
 }
 /*Fin Navbar Exchange*/
-
-/*Navbar Liquidity*/
-.nav {
-    background-color: #faf9fa;
+.mobile {
+    display: none;
+}
+.exchange__nav__mobile {
     display: flex;
-    justify-content: space-between;
-    border-bottom: #e7e3eb solid 1px;
-    &__bar {
+    justify-content: space-around;
+    background-color: $background-blanco;
+    position: absolute;
+    width: 100%;
+    bottom: 0%;
+    &__container{
         display: flex;
-        &__hover:hover {
+        flex-direction: column;
+        align-items: center;
+        color: black;
+        text-decoration: none;
+        padding: 6px;
+        &__text {
+            font-size: 12px;
+        }
+        &__on {
+            color: $red;
+        }
+        &:hover {
             background-color: $hover-blanco;
             border-radius: 1rem;
-            cursor: pointer;
-        }
-        &__hover {
-            padding: 12px;
-            &__link {
-                text-decoration: none;
-                color: black;
-                &__on {
-                    color: rgb(192, 192, 20);
-                    font-weight: bold;
-                 }
-            }
-        }
-        &__logo {
-            text-decoration: none;
-            color: black;
-            display: flex;
-            margin-left: 1rem;
-            margin-right: 2.5rem;
-            padding: 12px;
-            &__img {
-                height: 27px;
-                margin-right: 2px;
-            }
-            &__pokedex {
-                font-weight: bold;
-                font-size: 22px;
-                font-family: pokemon;
-            }
-        }
-        &__settings {
-            margin-top: 13px;
-        }
-        &__wallet {
-            padding: 12px;
-            &__button {
-                background-color: rgb(192, 192, 20);
-                color: #e7e3eb;
-                border: none;
-                border-radius: 2rem;
-                width: 135px;
-                cursor: pointer;
-                &:hover {
-                    color: white;
-                    border: solid yellow 1px;
-                }
-            }
         }
     }
-}
-body header nav div div {
-    margin-top: 2px;
-    margin-bottom: 2px;
 }
 
-@font-face {
-    font-family: pokemon;
-    src: url(../letras/ketchum.otf);
-}
-.nav__bar__dropdown {
-    display: none;
-    position: absolute;
-    width: 278px;
-    border: #e7e3eb solid 1px;
-    color: black;
-    border-radius: 1rem;
-    &__link {
-        text-decoration: none;
-        color: black;
+
+/*responsive Navbar*/
+@media only screen and (max-width: 1024px){
+
+    .exchange__nav__bar__logo {
+        margin-right: 0px;
     }
-    &__div__top {
-        padding: 10px;
-        &:hover {
-            background-color: $hover-blanco;
-            border-radius: 0.8rem 0.8rem 0 0;
+    .exchange__nav__bar__logo__img {
+        height: 32px;
+        margin-right: 0px;
+    }
+    .exchange__nav__bar__logo__pokedex {
+        display: none;
+    }
+    @media only screen and (max-width: 767px) {
+
+        .exchange__nav__bar__info , .exchange__nav__bar__trade , .exchange__nav__bar__nft{
+            display: none;
         }
-    }
-    &__div__bot {
-        padding: 10px;
-        &:hover {
-            background-color: $hover-blanco;
-            border-radius:  0 0 0.8rem 0.8rem;
+        .mobile {
+            display: block;
         }
+
     }
 }
-.nav__bar__trade:hover .nav__bar__dropdown {
-    display: block;
-    background-color: #faf9fa;
-}
-/*Fin Navbar Liquidity*/
+
+/*Fin responsive Navbar*/
