--- a/sass/partials/_wallet.scss
+++ b/sass/partials/_wallet.scss
@@ -1,7 +1,9 @@
 @import "../misc/variables";
 
 .wallet {  
-    display: block;     
+    
+    display: none;  
+    border: solid $border-blanco 1.5px;   
     .wallet__fondo {
         background-color: rgba(0, 0, 0, 0.267);
         position: fixed;
@@ -14,7 +16,7 @@
         justify-content: center;
 
         .wallet__container {
-            background-color: $background-blanco;
+            background-color: rgb(250, 237, 237)    ;
             width: 342px;
             height: 486px;
             border-radius: 2rem;
@@ -22,16 +24,67 @@
     }
     &__encabezado {
         display: flex;
-        padding: 1rem;
+        padding: 1.5rem;
         justify-content: space-between;
         align-items: center;
         background-color: $red;
         border-radius: 2rem 2rem 0 0;
+        margin-bottom: 10px;
         &__connect {
             font-size: 20px;
+            color: white;
         }
         &__close {
             cursor: pointer;
+        }
+    }
+    &__grid {
+        display: grid;
+        grid-template-columns: auto auto;
+        &__item {
+            margin: 2rem 2rem 2rem 1.6rem;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            cursor: pointer;
+            &:hover {
+                opacity: 0.5;
+                transition: 0.3s;
+            }
+            &__img {
+                width: 40px;
+                height: 40px;
+            }
+            &__text {
+                width: max-content;
+            }
+            &__more {
+                padding-top: 9px;
+                &__text {
+                    margin-top: 5px;
+                }
+            }
+        }
+    }
+    &__bot {
+        border-top: $border-blanco solid 1.5px;
+        &__text {
+            text-align: center;
+            margin-top: 20px;
+        }
+        &__button {
+            background-color: $red;
+            border-radius: 1rem;
+            color: white;
+            border: none;
+            width: 80%;
+            padding: 0.5rem;
+            font-weight: bold;  
+            &:hover {
+                opacity: 0.5;
+                transition: 0.3s;
+                cursor: pointer;
+            }
         }
     }
 }   
