--- a/sass/views/_exchange.scss
+++ b/sass/views/_exchange.scss
@@ -5,3 +5,118 @@
 .background__container__exchange {
     background-color: rgb(250, 237, 237);
 }
+
+.swap__container {
+    display: flex;
+    justify-content: center;
+    color: rgba(0, 0, 0, 0.815);
+    .swap {
+        border: solid $border-blanco 2px;
+        width: 326px;
+        height: 535px;
+        margin-top: 2.2%;
+        background-color: $background-blanco;
+        border-radius: 1.7rem;
+        text-align: center;
+
+        &__top {
+            display: flex;
+            flex-direction: column;
+            padding: 1.5rem;
+            border-bottom: solid $border-blanco 2px;
+            &__dirrection {
+                display: flex;
+                justify-content: space-between;
+                &__span {
+                    &:hover {
+                        cursor: pointer;
+                        opacity: 0.5;
+                        transition: 0.3s;
+                    }
+                }
+            }
+            &__text {
+                margin-left: 50px;
+                font-size: 1.2rem;
+            }
+            
+        }
+        &__middle {
+            padding: 2rem;
+
+            &__token {
+                display: flex;
+                &:hover {
+                    cursor: pointer;
+                    opacity: 0.5;
+                    transition: 0.3s;
+                }
+                &__img {
+                    height: 25px;
+                    width: 25px;
+                }
+            }
+            &__amount {
+                width: 90%;
+                border: solid 2px $border-blanco;
+                background-color: rgb(250, 237, 237);
+                border-radius: 1rem;
+                padding: 1rem;
+                text-align: end;
+            }
+            &__arrow {
+                background-color: rgb(250, 237, 237);
+                border-radius: 50%;
+                margin: 1rem;
+                padding: 5px;
+                &:hover {
+                    cursor: pointer;
+                    opacity: 0.5;
+                    transition: 0.3s;
+                }
+            }
+        }
+        &__bot {
+            display: flex;
+            justify-content: space-between;
+            margin-left: 10px;
+            margin-right: 10px;
+            padding: 1rem;
+            &__sli {
+                font-size: small;
+            }
+            &__p {
+                font-weight: bold;
+                color: $red;
+            }
+            &__btn {
+                width: 100%;
+                background-color: $red;
+                border-radius: 1rem;
+                color: white;
+                border: none;
+                padding: 0.3rem;
+                font-size: 1.1rem;
+                margin-top: 1rem;
+                &:hover {
+                    cursor: pointer;
+                    opacity: 0.5;
+                    transition: 0.3s;
+                }
+            }
+        }
+    }
+}
+.jere {
+    position: absolute;
+    bottom: 0%;
+    left: 0%;
+    width: 10%;
+}
+.ujsi {
+    position: absolute;
+    bottom: 0%;
+    right: 0%;
+    width: 20%;
+
+}
